fix(material/datepicker): a couple of accessibility issues in touch UI mode (#21228)
Resolves the following accessibility issues when the datepicker is in touch UI mode:
* Focus was going directly to the close button, because that's the first element
that the dialog's focus trap was running into. I've disabled the automatic
focus redirection since the calendar has its own.
* The calendar close button for screen readers was off-screen, because the
dialog container has `position: static` and `overflow: auto`.

Apart from the two issues above, I've also made it so the screen reader button's
theme color matches the one of the calendar. This is mostly so the button
doesn't look out of place if the calendar has a different theme and the user
tabs into it.

--- a/src/material/datepicker/calendar-body.scss
+++ b/src/material/datepicker/calendar-body.scss
@@ -185,6 +185,12 @@ $mat-calendar-range-end-body-cell-size:
   }
 }
 
+// Allows for the screen reader close button to be seen in touch UI mode.
+.mat-datepicker-dialog .mat-dialog-container {
+  position: relative;
+  overflow: visible;
+}
+
 @include cdk-high-contrast(active, off) {
   .mat-datepicker-popup:not(:empty),
   .mat-calendar-body-selected {
